# Heritage_Pipeline

./: .gitignore  README.md  analyze_arc_detailed.py  analyze_arc_results.py  generate_arc_report.py  pipeline.py  pyproject.toml  setup_env.sh  train.py
configs/: pipeline.yaml
modules/: README.md
modules/detection/: conv_demo.py  nano.py  yolox_detector.py
modules/lm/: README.md  bert.py  checkbbox.py  eval_bert.py  eval_bert_q.py  eval_kenlm.py  eval_kenlm_q.py  eval_kenlm_then_bert.py  eval_nanogpt.py  insertspace.py  run_best_pipeline.py  xycut.py
modules/lm/configs/: best_pipeline.env.example
modules/lm/pipelines/: eval_kenlm.py  eval_kenlm_q.py  run_best_pipeline.py
modules/restoration/nafnet/: infer_withmask.py
modules/restoration/unet++/: README.md  inference.py  requirements.txt
modules/stain_removal/: .gitignore  CLAUDE.md  README.md  main1.py  main_high_inference.py  pipeline.py  postprocess_redtext.py  setup_env.sh
modules/stain_removal/scripts/: __init__.py  evaluate.py  generate_mask.py  main1.py  main_high_inference.py  pipeline.py  prepare_inference_dir.py  split_full_dataset.py  train_page.py  train_patch.py
modules/stain_removal/src/: denoising.py  inpainting.py  metrics.py  orig_dataset.py  postprocess.py  random_crop.py  svd_replacement.py  train_common.py
output/test_all/200004107/: metadata.json
output/test_all/200008003/: metadata.json
scripts/: copy_missing_to_inference_input.py  make_yolo_dataset.py  run_arc_inference.py  run_yolo_inference.py  setup_conda_env.sh  train_books.txt  train_efficientnet.py
(+18 files in other folders)
